# P12_LeRoy_Adrien

./: README.md  setup.cfg
EpicEvents/: .coveragerc  pyproject.toml  pytest.ini  requirements.txt
EpicEvents/EpicEvents/: settings.py  urls.py
EpicEvents/app/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
EpicEvents/app/migrations/: 0001_initial.py  0002_alter_event_status_options_and_more.py  0003_user_is_admin_alter_user_is_active_and_more.py  0004_remove_user_date_joined_remove_user_is_admin_and_more.py  0005_alter_event_attendees_alter_event_event_date_and_more.py
EpicEvents/app/test/functional_tests/: test_functional_chrome.py
EpicEvents/app/test/unit_tests/: test_route.py
